# produkto-sercxilo

./: .gitignore  Dockerfile  Makefile  dump.json  entry.sh  pyproject.toml  requirements.txt  run.py  scrapy.cfg  scrapyd.conf  setup.cfg  setup.py
alembic/: env.py
alembic/versions/: 0bafd3082b54_.py  9b403361c66d_.py
dbs/: produkto_sercxilo.db
eggs/produkto_sercxilo/: 1619463953.egg
produkto_sercxilo/: db.py  items.py  models.py  pipelines.py  schemas.py  settings.py
produkto_sercxilo/spiders/: anthonyboyd_spider.py  mrmockup_spider.py
project.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
