[tool.poetry]
name = "producto-sercxilo"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.4.1"
html2text = "^2020.1.16"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
